@@ -18,22 +18,44 @@
 
 #include <stdio.h>
 #include <string.h>
+#include <stdlib.h>  // for exit()
 #include <stdarg.h>  // for va_list
 #include "cexception.h"
 #include "csimul.h"
 #include "cmodule.h"
 #include "errmsg.h"
+#include "cenvir.h"
 
 
 #define BUFLEN 1024
 static char buffer[BUFLEN];
 static char buffer2[BUFLEN];
 
+
+//
+// Helper, called from every cException constructor.
+//
+// If an exception occurs in initialization code (during construction of
+// global objects, before main() is called), there's nobody who could
+// catch the error, so it would just cause a program abort.
+// Here we handle this case manually: if cException ctor is invoked before
+// main() has started, we print the error message and call exit(1).
+//
+static void exitIfStartupError(cException *e)
+{
+    if (!cStaticFlag::isSet())
+    {
+        ev.printfmsg("Error during startup: %s. Exiting.", e->message());
+        exit(1);
+    }
+}
+
 cException::cException()
 {
     errorcode = eCUSTOM;
     storeCtx();
     // 'message' remains empty
+    exitIfStartupError(this);
 }
 
 cException::cException(int errc...)
@@ -42,6 +64,7 @@ cException::cException(int errc...)
     va_start(va, errc);
     init(NULL, errc, emsg[errc], va);
     va_end(va);
+    exitIfStartupError(this);
 }
 
 cException::cException(const char *msgformat...)
@@ -50,6 +73,7 @@ cException::cException(const char *msgformat...)
     va_start(va, msgformat);
     init(NULL, eCUSTOM, msgformat, va);
     va_end(va);
+    exitIfStartupError(this);
 }
 
 cException::cException(const cObject *where, int errc...)
@@ -58,6 +82,7 @@ cException::cException(const cObject *where, int errc...)
     va_start(va, errc);
     init(where, errc, emsg[errc], va);
     va_end(va);
+    exitIfStartupError(this);
 }
 
 cException::cException(const cObject *where, const char *msgformat...)
@@ -66,6 +91,7 @@ cException::cException(const cObject *where, const char *msgformat...)
     va_start(va, msgformat);
     init(where, eCUSTOM, msgformat, va);
     va_end(va);
+    exitIfStartupError(this);
 }
 
 void cException::storeCtx()
