@@ -1,3 +1,9 @@
+2003-06-16  Andras Varga
+
+	* cexception.cc: handle exceptions during initialization:
+	if cException ctor is invoked before main() has started, we print 
+	the error message and call exit(1).
+
 2003-06-14  Andras Varga
 
 	* cmodule.cc: cModule's addGate(), addPar() return type changed from
